--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
     }
 }
 
-@media only screen and (min-width: 300px) {
+@media only screen and (min-width: 301px) and (max-width: 767px) {
     body {
         background-color: green;
         font-size: 20px;
